--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -40,6 +40,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="username"
+            android:singleLine="true"
+            android:ellipsize="end"
             android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
 
         <TextView
